k8s/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: quiniela-gateway-class
spec:
  controllerName: example.com/foo
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: quiniela-gateway
  namespace: sopes1
spec:
  gatewayClassName: quiniela-gateway-class
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
