k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rust-api-route
  namespace: sopes1
spec:
  parentRefs:
  - name: quiniela-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /grpc-202300733
    backendRefs:
    - name: rust-api-service
      port: 8080
